# flair2

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml  experiment-distributed-patterns.md  experiment-m5-load-test.md  experiment-m5-resilience.md  experiment-m6-elasticache.md  experiment-overview.md  m5-4-locust-report.md  m5-experiments-report.md  m6-elasticache-report.md  tags
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/infra/: dynamo_client.py  rate_limiter.py  redis_client.py  s3_client.py
backend/app/models/: api.py  errors.py  performance.py  pipeline.py  stages.py
backend/app/pipeline/: orchestrator.py
backend/app/providers/: base.py  gemini.py  kimi.py  registry.py  usage.py  utils.py
backend/app/runner/: cli.py  data_loader.py  local_runner.py
backend/app/sse/: manager.py
backend/app/workers/: celery_app.py  tasks.py
backend/data/: personas.json  sample_creator_profiles.json  sample_videos.json
backend/tests/: conftest.py
backend/tests/experiments/: locustfile.py  run_load_test.sh  test_backpressure.py  test_cache_concurrency.py  test_e2e_pipeline.py  test_elasticache_integration.py  test_exactly_once.py  test_failure_recovery.py  test_fanout_parallelism.py  test_straggler_mitigation.py
backend/tests/fixtures/: sample_creator_profile.json  sample_video_input.json
backend/tests/integration/: test_multi_user.py
backend/tests/load/: locustfile.py  run_all_k.sh
backend/tests/unit/: test_api_routes.py  test_dynamo_client.py  (+16 more)
(+176 files in other folders)
